--- a/College-Connect-main/package.json
+++ b/College-Connect-main/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.60.5",
+    "axios": "^1.12.2",
     "firebase": "^11.0.2",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
