--- a/College-Connect-main/package.json
+++ b/College-Connect-main/package.json
@@ -13,10 +13,11 @@
     "@tanstack/react-query": "^5.60.5",
     "axios": "^1.12.2",
     "firebase": "^11.0.2",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
